--- a/configure.ac
+++ b/configure.ac
@@ -40,5 +40,5 @@ dnl Checks for library functions.
 AC_CONFIG_FILES([
 	Makefile
 	src/Makefile
-	src/coro/Makefile])
+	src/libcoro/Makefile])
 AC_OUTPUT
