--- a/configure.ac
+++ b/configure.ac
@@ -1,20 +1,22 @@
 dnl Process this file with autoconf to produce a configure script.
 
 dnl Initialize autoconf.
-AC_PREREQ(2.68)
+AC_PREREQ(2.69)
 AC_INIT([MainMemory], [0.0], [ademakov@gmail.com])
 AC_CONFIG_AUX_DIR([config])
-AC_CONFIG_SRCDIR([src/mmemd.c])
+AC_CONFIG_SRCDIR([src/dlmalloc/malloc.c])
 AC_CONFIG_HEADERS([src/config.h])
 
 dnl Initialize automake.
-AM_INIT_AUTOMAKE([-Wall -Werror foreign])
+AM_INIT_AUTOMAKE([-Wall -Werror foreign subdir-objects])
 
 dnl Determine the host system type.
 AC_CANONICAL_HOST
 
 dnl Checks for programs.
 AC_PROG_CC
+AM_PROG_CC_C_O
+AM_PROG_AR
 AC_PROG_RANLIB
 
 dnl Checks for libraries.
