--- a/src/libcoro/Makefile.am
+++ b/src/libcoro/Makefile.am
@@ -1,4 +1,4 @@
 
 noinst_LIBRARIES = libcoro.a
-libcoro_a_SOURCES = coro,h coro.c
+libcoro_a_SOURCES = coro,c coro.h
 libcoro_a_CFLAGS = @CORO_FLAGS@
