--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+*.o
+*.a
+*~
+
+.deps
 Makefile
 Makefile.in
 aclocal.m4
@@ -11,8 +16,7 @@ config/depcomp
 config/install-sh
 config/missing
 src/config.h
+src/config.h.in
 src/stamp-h1
-.deps
-*.o
-*.a
-*~
+
+nbproject/
