--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -3,7 +3,7 @@ SUBDIRS = libcoro
 
 bin_PROGRAMS = mmem
 
-mmem_CFLAGS = -std=c99 -DENABLE_TRACE=1
+mmem_CFLAGS = -std=c99
 
 mmem_SOURCES = \
 	event.c event.h main.c util.c util.h \
