--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -6,5 +6,5 @@ bin_PROGRAMS = mmem
 mmem_CFLAGS = -std=c99
 
 mmem_SOURCES = \
-	event.c event.h main.c net.c net.h util.c util.h \
+	event.c event.h main.c net.c net.h sched.c sched.h util.c util.h \
 	dlmalloc/malloc.c dlmalloc/malloc.h
