--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -7,5 +7,5 @@ mmem_CFLAGS = -std=c99
 
 mmem_SOURCES = \
 	common.h event.c event.h list.h main.c net.c net.h \
-	sched.c sched.h util.c util.h \
+	pool.c pool.h sched.c sched.h task.c task.h util.c util.h \
 	dlmalloc/malloc.c dlmalloc/malloc.h
