Add first bits of the port code, small chenges here and there.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -6,6 +6,6 @@ bin_PROGRAMS = mmem
 mmem_CFLAGS = -std=c99
 
 mmem_SOURCES = \
-	common.h event.c event.h list.h main.c net.c net.h \
-	pool.c pool.h sched.c sched.h task.c task.h util.c util.h \
+	common.h event.c event.h list.h main.c net.c net.h pool.c pool.h \
+	port.c port.h sched.c sched.h task.c task.h util.c util.h \
 	dlmalloc/malloc.c dlmalloc/malloc.h
