Change compiler flags to allow gnu extensions.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -3,7 +3,7 @@ SUBDIRS = libcoro
 
 bin_PROGRAMS = mmem
 
-mmem_CFLAGS = -std=c99
+mmem_CFLAGS = -std=gnu99
 
 mmem_SOURCES = \
 	common.h event.c event.h list.h main.c net.c net.h pool.c pool.h \
