--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -8,4 +8,5 @@ mmem_CFLAGS = -std=gnu99
 mmem_SOURCES = \
 	common.h event.c event.h list.h main.c net.c net.h pool.c pool.h \
 	port.c port.h sched.c sched.h task.c task.h util.c util.h \
-	dlmalloc/malloc.c dlmalloc/malloc.h
+	dlmalloc/malloc.c dlmalloc/malloc.h \
+	arch/x86-64/stack-init.c arch/x86-64/stack-switch.S
