--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,5 +1,5 @@
 
-#SUBDIRS =
+SUBDIRS = memcache
 
 bin_PROGRAMS = mmem
 
@@ -9,6 +9,8 @@ mmem_SOURCES = \
 	arch.h common.h event.c event.h list.h main.c net.c net.h \
 	pool.c pool.h port.c port.h sched.c sched.h stack.c stack.h \
 	task.c task.h util.c util.h dlmalloc/malloc.c dlmalloc/malloc.h
+
+mmem_LDADD = memcache/libmemcache.a
 
 if ARCH_X86
 mmem_SOURCES += arch/x86/stack-init.c arch/x86/stack-switch.S
