--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -6,7 +6,7 @@ bin_PROGRAMS = mmem
 mmem_CFLAGS = -std=gnu99
 
 mmem_SOURCES = \
-	arch.h common.h event.c event.h list.h main.c net.c net.h \
+	arch.h bits.h common.h event.c event.h list.h main.c net.c net.h \
 	pool.c pool.h port.c port.h runq.c runq.h sched.c sched.h \
 	stack.c stack.h task.c task.h util.c util.h work.c work.h \
 	dlmalloc/malloc.c dlmalloc/malloc.h
