added new file for priority event queue

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -10,7 +10,8 @@ mmem_SOURCES = \
 	future.c future.h list.h main.c net.c net.h pool.c pool.h \
 	port.c port.h runq.c runq.h sched.c sched.h stack.c stack.h \
 	task.c task.h util.c util.h work.c work.h \
-	dlmalloc/malloc.c dlmalloc/malloc.h
+	dlmalloc/malloc.c dlmalloc/malloc.h \
+	peq.c
 
 mmem_LDADD = memcache/libmemcache.a
 
