Use autoconf macro for c99 standard check.

--- a/configure.ac
+++ b/configure.ac
@@ -35,6 +35,7 @@ AM_CONDITIONAL([ARCH_GENERIC], [test "$arch" = "generic"])
 
 dnl Checks for programs.
 AC_PROG_CC
+AC_PROG_CC_C99
 AM_PROG_CC_C_O
 AM_PROG_AR
 AM_PROG_AS
