--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -6,12 +6,13 @@ bin_PROGRAMS = mmem
 mmem_CFLAGS = -Wall -Wextra
 
 mmem_SOURCES = \
+	arch.h arch/memory.h arch/stack.h \
 	bits.h clock.c clock.h common.h core.c core.h event.c event.h \
 	future.c future.h hook.c hook.h list.h main.c net.c net.h \
 	pool.c pool.h port.c port.h runq.c runq.h sched.c sched.h \
 	stack.c stack.h task.c task.h thread.c thread.h timeq.c timeq.h \
 	timer.c timer.h util.c util.h work.c work.h \
-	arch/stack.h dlmalloc/malloc.c dlmalloc/malloc.h
+	dlmalloc/malloc.c dlmalloc/malloc.h
 
 mmem_LDADD = memcache/libmemcache.a
 
