Add memory fences.

--- a/configure.ac
+++ b/configure.ac
@@ -47,6 +47,7 @@ dnl Checks for header files.
 AC_CHECK_HEADERS([stdlib.h unistd.h ucontext.h])
 AC_CHECK_HEADERS([sys/epoll.h sys/event.h])
 AC_CHECK_HEADERS([mach/mach_time.h sys/time.h time.h]) 
+AC_CHECK_HEADERS([xmmintrin.h])
 
 dnl Checks for typedefs, structures, and compiler characteristics.
 
