Remove arch.h again, include arch-specific heders from common.h

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -6,7 +6,7 @@ bin_PROGRAMS = mmem
 mmem_CFLAGS = -Wall -Wextra
 
 mmem_SOURCES = \
-	arch.h arch/memory.h arch/stack.h \
+	arch/atomic.h arch/common.h arch/memory.h arch/stack.h \
 	bits.h clock.c clock.h common.h core.c core.h event.c event.h \
 	future.c future.h hook.c hook.h list.h main.c net.c net.h \
 	pool.c pool.h port.c port.h runq.c runq.h sched.c sched.h \
@@ -18,14 +18,16 @@ mmem_LDADD = memcache/libmemcache.a
 
 if ARCH_X86
 mmem_SOURCES += \
-    arch/x86/asm.h arch/x86/fence.h \
-    arch/x86/stack-init.c arch/x86/stack-switch.S
+	arch/x86/asm.h arch/x86/atomic.h arch/x86/common.h arch/x86/fence.h \
+	arch/x86/stack-init.c arch/x86/stack-switch.S
 endif
+
 if ARCH_X86_64
 mmem_SOURCES += \
-    arch/x86-64/asm.h arch/x86-64/fence.h \
-    arch/x86-64/stack-init.c arch/x86-64/stack-switch.S
+	arch/x86-64/asm.h arch/x86-64/atomic.h arch/x86-64/common.h arch/x86-64/fence.h \
+	arch/x86-64/stack-init.c arch/x86-64/stack-switch.S
 endif
+
 if ARCH_GENERIC
-mmem_SOURCES += arch/generic/stack.c
+mmem_SOURCES += arch/generic/atomic.h arch/generic/common.h arch/generic/stack.c
 endif
