--- a/src/memcache/Makefile.am
+++ b/src/memcache/Makefile.am
@@ -3,4 +3,5 @@ noinst_LIBRARIES = libmemcache.a
 
 libmemcache_a_SOURCES = memcache.h memcache.c
 
-libmemcache_a_CFLAGS = -std=gnu99 -Wall -Wextra
+libmemcache_a_CPPFLAGS = -I$(top_srcdir)/src
+libmemcache_a_CFLAGS = -Wall -Wextra
