--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -11,9 +11,9 @@ mmem_SOURCES = \
 	core.c core.h event.c event.h exit.c exit.h future.c future.h \
 	hook.c hook.h list.h lock.h log.c log.h main.c net.c net.h \
 	pool.c pool.h port.c port.h runq.c runq.h sched.c sched.h \
-	stack.c stack.h task.c task.h thread.c thread.h timeq.c timeq.h \
-	timer.c timer.h trace.c trace.h util.c util.h work.c work.h \
-	dlmalloc/malloc.c dlmalloc/malloc.h
+	selfpipe.c selfpipe.h stack.c stack.h task.c task.h thread.c thread.h \
+	timeq.c timeq.h timer.c timer.h trace.c trace.h util.c util.h \
+	work.c work.h dlmalloc/malloc.c dlmalloc/malloc.h
 
 mmem_LDADD = memcache/libmemcache.a
 
