Move all stuff from sched.c and sched.h to task,c and task.h, change the function names accordingly.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -10,7 +10,7 @@ mmem_SOURCES = \
 	alloc.c alloc.h bits.h chunk.c chunk.h clock.c clock.h common.h \
 	core.c core.h event.c event.h exit.c exit.h future.c future.h \
 	hook.c hook.h list.h lock.h log.c log.h main.c net.c net.h \
-	pool.c pool.h port.c port.h ring.c ring.h runq.c runq.h sched.c sched.h \
+	pool.c pool.h port.c port.h ring.c ring.h runq.c runq.h \
 	selfpipe.c selfpipe.h stack.c stack.h task.c task.h thread.c thread.h \
 	timeq.c timeq.h timer.c timer.h trace.c trace.h util.c util.h \
 	dlmalloc/malloc.c dlmalloc/malloc.h
