--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -7,12 +7,13 @@ mmem_CFLAGS = -Wall -Wextra -DMSPACES -DUSE_DL_PREFIX
 
 mmem_SOURCES = \
 	arch/atomic.h arch/common.h arch/memory.h arch/stack.h \
-	alloc.c alloc.h bits.h chunk.c chunk.h clock.c clock.h common.h \
-	core.c core.h event.c event.h exit.c exit.h future.c future.h \
-	hook.c hook.h list.h lock.h log.c log.h main.c net.c net.h \
-	pool.c pool.h port.c port.h ring.c ring.h runq.c runq.h \
-	selfpipe.c selfpipe.h stack.c stack.h task.c task.h thread.c thread.h \
-	timeq.c timeq.h timer.c timer.h trace.c trace.h util.c util.h \
+	alloc.c alloc.h bits.h buffer.c buffer.h chunk.c chunk.h \
+	clock.c clock.h common.h core.c core.h event.c event.h \
+	exit.c exit.h future.c future.h hook.c hook.h list.h lock.h \
+	log.c log.h main.c net.c net.h pool.c pool.h \ port.c port.h \
+	ring.c ring.h runq.c runq.h selfpipe.c selfpipe.h stack.c stack.h \
+	task.c task.h thread.c thread.h timeq.c timeq.h timer.c timer.h \
+	trace.c trace.h util.c util.h \
 	dlmalloc/malloc.c dlmalloc/malloc.h
 
 mmem_LDADD = memcache/libmemcache.a
