Use futexes for thread wait/signal on linux.

--- a/configure.ac
+++ b/configure.ac
@@ -49,7 +49,7 @@ AC_SEARCH_LIBS([pthread_create], [pthread],
 dnl Checks for header files.
 AC_CHECK_HEADERS([stdlib.h unistd.h ucontext.h])
 AC_CHECK_HEADERS([mach/semaphore.h mach/thread_policy.h pthread.h sched.h])
-AC_CHECK_HEADERS([sys/epoll.h sys/event.h sys/sysctl.h])
+AC_CHECK_HEADERS([sys/epoll.h sys/event.h sys/sysctl.h linux/futex.h])
 AC_CHECK_HEADERS([mach/mach_time.h sys/time.h time.h]) 
 AC_CHECK_HEADERS([xmmintrin.h])
 
