--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -9,12 +9,12 @@ mmem_SOURCES = \
 	arch/atomic.h arch/common.h arch/memory.h arch/stack.h \
 	alloc.c alloc.h bits.h bitset.c bitset.h buffer.c buffer.h \
 	cdata.c cdata.h chunk.c chunk.h clock.c clock.h common.h core.c core.h \
-	event.c event.h exit.c exit.h future.c future.h hook.c hook.h \
-	list.h lock.h log.c log.h main.c net.c net.h pool.c pool.h \
-	port.c port.h ring.c ring.h runq.c runq.h stack.c stack.h \
-	synch.c synch.h task.c task.h thread.c thread.h timeq.c timeq.h \
-	timer.c timer.h trace.c trace.h util.c util.h value.h wait.c wait.h \
-	dlmalloc/malloc.c dlmalloc/malloc.h
+	event.c event.h exit.c exit.h future.c future.h hash.c hash.h \
+	hook.c hook.h list.h lock.h log.c log.h main.c net.c net.h \
+	pool.c pool.h port.c port.h ring.c ring.h runq.c runq.h \
+	stack.c stack.h synch.c synch.h task.c task.h thread.c thread.h \
+	timeq.c timeq.h timer.c timer.h trace.c trace.h util.c util.h value.h \
+	wait.c wait.h dlmalloc/malloc.c dlmalloc/malloc.h
 
 mmem_LDADD = memcache/libmemcache.a
 
