Rename and move arch-specific locks.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -6,34 +6,34 @@ bin_PROGRAMS = mmem
 mmem_CFLAGS = -Wall -Wextra -DMSPACES -DUSE_DL_PREFIX
 
 mmem_SOURCES = \
-	arch/atomic.h arch/basic.h arch/memory.h arch/spin.h arch/stack.h \
+	arch/atomic.h arch/basic.h arch/lock.h arch/memory.h arch/spin.h \
+	arch/stack.h dlmalloc/malloc.c dlmalloc/malloc.h \
 	alloc.c alloc.h backoff.h bitops.h bitset.c bitset.h buffer.c buffer.h \
 	cdata.c cdata.h chunk.c chunk.h clock.c clock.h common.h core.c core.h \
-	event.c event.h exit.c exit.h future.c future.h hash.h \
-	hook.c hook.h list.h lock.c lock.h log.c log.h main.c net.c net.h \
-	pool.c pool.h port.c port.h ring.c ring.h runq.c runq.h \
-	stack.c stack.h synch.c synch.h task.c task.h thread.c thread.h \
-	timeq.c timeq.h timer.c timer.h trace.c trace.h util.c util.h value.h \
-	wait.c wait.h dlmalloc/malloc.c dlmalloc/malloc.h
+	event.c event.h exit.c exit.h future.c future.h hash.h hook.c hook.h \
+	list.h lock.c lock.h log.c log.h main.c net.c net.h pool.c pool.h \
+	port.c port.h ring.c ring.h runq.c runq.h stack.c stack.h \
+	synch.c synch.h task.c task.h thread.c thread.h timeq.c timeq.h \
+	timer.c timer.h trace.c trace.h util.c util.h value.h wait.c wait.h
 
 mmem_LDADD = memcache/libmemcache.a
 
 if ARCH_X86
 mmem_SOURCES += \
 	arch/x86/asm.h arch/x86/atomic.h arch/x86/basic.h \
-	arch/x86/fence.h arch/x86/spin.h \
+	arch/x86/fence.h arch/x86/lock.h arch/x86/spin.h \
 	arch/x86/stack-init.c arch/x86/stack-switch.S
 endif
 
 if ARCH_X86_64
 mmem_SOURCES += \
 	arch/x86-64/asm.h arch/x86-64/atomic.h arch/x86-64/basic.h \
-	arch/x86-64/fence.h arch/x86-64/spin.h \
+	arch/x86-64/fence.h arch/x86-64/lock.h arch/x86-64/spin.h \
 	arch/x86-64/stack-init.c arch/x86-64/stack-switch.S
 endif
 
 if ARCH_GENERIC
 mmem_SOURCES += \
-    arch/generic/atomic.h arch/generic/basic.h \
-    arch/generic/spin.h arch/generic/stack.c
+	arch/generic/atomic.h arch/generic/basic.h \
+	arch/generic/lock.h arch/generic/spin.h arch/generic/stack.c
 endif
