--- a/src/memcache/Makefile.am
+++ b/src/memcache/Makefile.am
@@ -1,7 +1,9 @@
 
 noinst_LIBRARIES = libmemcache.a
 
-libmemcache_a_SOURCES = entry.c entry.h memcache.c memcache.h table.c table.h
+libmemcache_a_SOURCES = \
+	command.c command.h entry.c entry.h memcache.c memcache.h \
+	table.c table.h
 
 libmemcache_a_CPPFLAGS = -I$(top_srcdir)/src
 libmemcache_a_CFLAGS = -Wall -Wextra
