Un-inline murmur hash function.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -11,7 +11,7 @@ mmem_SOURCES = \
 	alloc.c alloc.h backoff.c backoff.h bitops.h bitset.c bitset.h \
 	buffer.c buffer.h cdata.c cdata.h chunk.c chunk.h clock.c clock.h \
 	common.h core.c core.h event.c event.h exit.c exit.h \
-	future.c future.h hash.h hook.c hook.h list.h lock.c lock.h \
+	future.c future.h hash.c hash.h hook.c hook.h list.h lock.c lock.h \
 	log.c log.h main.c net.c net.h netbuf.c netbuf.h pool.c pool.h \
 	port.c port.h ring.c ring.h runq.c runq.h stack.c stack.h \
 	synch.c synch.h task.c task.h thread.c thread.h timeq.c timeq.h \
