--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -15,7 +15,8 @@ mmem_SOURCES = \
 	log.c log.h main.c net.c net.h netbuf.c netbuf.h pool.c pool.h \
 	port.c port.h ring.c ring.h runq.c runq.h stack.c stack.h \
 	synch.c synch.h task.c task.h thread.c thread.h timeq.c timeq.h \
-	timer.c timer.h trace.c trace.h util.c util.h value.h wait.c wait.h
+	timer.c timer.h trace.c trace.h util.c util.h value.h wait.c wait.h \
+	work.c work.h
 
 mmem_LDADD = memcache/libmemcache.a
 
