--- a/src/base/Makefile.am
+++ b/src/base/Makefile.am
@@ -28,6 +28,7 @@ libmmbase_a_SOURCES = \
 	mem/chunk.c mem/chunk.h \
 	mem/malloc.c mem/malloc.h \
 	mem/mem.c mem/mem.h \
+	mem/slider.c mem/slider.h \
 	mem/space.c mem/space.h \
 	mem/stack.c mem/stack.h \
 	sys/clock.c sys/clock.h \
