Add endian macros, it is simpler to define them unconditionally than checking with autoconf the presence of the system endian.h and htonll.

--- a/src/base/Makefile.am
+++ b/src/base/Makefile.am
@@ -11,6 +11,7 @@ libmmbase_a_SOURCES = \
 	bitset.c bitset.h \
 	cksum.c cksum.h \
 	combiner.c combiner.h \
+	endian.h \
 	hash.c hash.h \
 	list.h \
 	lock.c lock.h \
