Move all local_* and shared_* memory allocation routines to the base lib. Reshuffle base memory files.

--- a/src/base/Makefile.am
+++ b/src/base/Makefile.am
@@ -28,7 +28,7 @@ libmmbase_a_SOURCES = \
 	mem/cdata.c mem/cdata.h \
 	mem/chunk.c mem/chunk.h \
 	mem/malloc.c mem/malloc.h \
-	mem/mem.c mem/mem.h \
+	mem/memory.c mem/memory.h \
 	mem/slider.c mem/slider.h \
 	mem/space.c mem/space.h \
 	mem/stack.c mem/stack.h \
