--- a/tests/base/Makefile.am
+++ b/tests/base/Makefile.am
@@ -1,15 +1,15 @@
 
-noinst_PROGRAMS = combiner lock ring-mpmc ring-spsc
-
 AM_CPPFLAGS = -I$(top_srcdir)/src
 AM_CFLAGS = -Wall -Wextra
 
-combiner_SOURCES = combiner.c params.c params.h runner.c runner.h
-
-lock_SOURCES = lock.c params.c params.h runner.c runner.h
-
-ring_mpmc_SOURCES = ring-mpmc.c params.c params.h runner.c runner.h
-
-ring_spsc_SOURCES = ring-spsc.c params.c params.h runner.c runner.h
-
 LDADD = $(top_builddir)/src/base/libmmbase.a
+
+noinst_PROGRAMS = combiner-bench lock-bench ring-mpmc-bench ring-spsc-bench
+
+combiner_bench_SOURCES = combiner-bench.c params.c params.h runner.c runner.h
+
+lock_bench_SOURCES = lock-bench.c params.c params.h runner.c runner.h
+
+ring_mpmc_bench_SOURCES = ring-mpmc-bench.c params.c params.h runner.c runner.h
+
+ring_spsc_bench_SOURCES = ring-spsc-bench.c params.c params.h runner.c runner.h
