Add event backend files, move lower level bits there from dispatch.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -44,6 +44,7 @@ core_sources = \
 	core/work.c core/work.h
 
 event_sources = \
+	event/backend.c event/backend.h \
 	event/batch.c event/batch.h \
 	event/dispatch.c event/dispatch.h \
 	event/epoll.c event/epoll.h \
