--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -7,27 +7,31 @@ bin_PROGRAMS = mmem
 
 arch_sources = \
 	arch/atomic.h arch/basic.h arch/cstack.h \
-	arch/lock.h arch/memory.h arch/spin.h
+	arch/lock.h arch/memory.h arch/spin.h \
+	arch/syscall.h
 
 if ARCH_X86
 arch_sources += \
 	arch/x86/asm.h arch/x86/atomic.h arch/x86/basic.h \
 	arch/x86/cstack-init.c arch/x86/cstack-switch.S \
-	arch/x86/fence.h arch/x86/lock.h arch/x86/spin.h
+	arch/x86/fence.h arch/x86/lock.h arch/x86/spin.h \
+	arch/x86/syscall.h
 endif
 
 if ARCH_X86_64
 arch_sources += \
 	arch/x86-64/asm.h arch/x86-64/atomic.h arch/x86-64/basic.h \
 	arch/x86-64/cstack-init.c arch/x86-64/cstack-switch.S \
-	arch/x86-64/fence.h arch/x86-64/lock.h arch/x86-64/spin.h
+	arch/x86-64/fence.h arch/x86-64/lock.h arch/x86-64/spin.h \
+	arch/x86-64/syscall.h
 endif
 
 if ARCH_GENERIC
 arch_sources += \
 	arch/generic/atomic.h arch/generic/basic.h \
 	arch/generic/cstack.c \
-	arch/generic/lock.h arch/generic/spin.h
+	arch/generic/lock.h arch/generic/spin.h \
+	arch/generic/syscall.h
 endif
 
 core_sources = \
