Port thread CPU affinity setting to FreeBSD.

--- a/configure.ac
+++ b/configure.ac
@@ -57,7 +57,8 @@ AC_SEARCH_LIBS([pthread_create], [pthread],
 
 dnl Checks for header files.
 AC_CHECK_HEADERS([stdlib.h unistd.h ucontext.h])
-AC_CHECK_HEADERS([mach/semaphore.h mach/thread_policy.h pthread.h sched.h])
+AC_CHECK_HEADERS([mach/semaphore.h mach/thread_policy.h])
+AC_CHECK_HEADERS([pthread.h pthread_np.h sched.h sys/cpuset.h])
 AC_CHECK_HEADERS([sys/epoll.h sys/event.h sys/sysctl.h linux/futex.h])
 AC_CHECK_HEADERS([mach/mach_time.h sys/time.h time.h]) 
 AC_CHECK_HEADERS([xmmintrin.h])
@@ -67,6 +68,8 @@ dnl Checks for typedefs, structures, and compiler characteristics.
 dnl Checks for library functions.
 AC_CHECK_FUNCS(pthread_setaffinity_np)
 AC_CHECK_FUNCS(pthread_setname_np)
+AC_CHECK_FUNCS(pthread_yield_np)
+AC_CHECK_FUNCS(pthread_yield)
 
 dnl Check command line arguments
 
