--- a/src/base/Makefile.am
+++ b/src/base/Makefile.am
@@ -39,7 +39,6 @@ libmmbase_a_SOURCES = \
 	mem/alloc.c mem/alloc.h \
 	mem/arena.h mem/arena.c \
 	mem/buffer.c mem/buffer.h \
-	mem/cdata.c mem/cdata.h \
 	mem/chunk.c mem/chunk.h \
 	mem/cstack.c mem/cstack.h \
 	mem/malloc.c mem/malloc.h \
@@ -48,6 +47,7 @@ libmmbase_a_SOURCES = \
 	mem/slider.c mem/slider.h \
 	mem/space.c mem/space.h \
 	thread/domain.c thread/domain.h \
+	thread/local.c mem/local.h \
 	thread/monitor.c thread/monitor.h \
 	thread/request.c thread/request.h \
 	thread/thread.c thread/thread.h \
