--- a/src/base/Makefile.am
+++ b/src/base/Makefile.am
@@ -20,6 +20,7 @@ libmmbase_a_SOURCES = \
 	list.h \
 	lock.c lock.h \
 	ring.c ring.h \
+	settings.c settings.h \
 	stdcall.h \
 	timeq.c timeq.h \
 	topology.c topology.h \
