--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -5,6 +5,8 @@ AM_CFLAGS = -Wall -Wextra
 
 bin_PROGRAMS = mmem
 
+noinst_LIBRARIES = libmmarch.a
+
 arch_sources = \
 	arch/atomic.h arch/basic.h arch/cstack.h \
 	arch/lock.h arch/memory.h arch/spin.h \
@@ -23,7 +25,7 @@ arch_sources += \
 	arch/x86-64/asm.h arch/x86-64/atomic.h arch/x86-64/basic.h \
 	arch/x86-64/cstack.c arch/x86-64/cstack-switch.S \
 	arch/x86-64/fence.h arch/x86-64/lock.h arch/x86-64/spin.h \
-	arch/x86-64/syscall.h
+	arch/x86-64/syscall.h arch/x86-64/syscall.c
 endif
 
 if ARCH_GENERIC
@@ -51,8 +53,10 @@ net_sources = \
 	net/net.c net/net.h \
 	net/netbuf.c net/netbuf.h
 
+libmmarch_a_SOURCES = $(arch_sources)
+
 mmem_SOURCES = \
-	$(arch_sources) $(core_sources) $(net_sources) \
+	$(core_sources) $(net_sources) \
 	common.h main.c
 
-mmem_LDADD = memcache/libmemcache.a base/libmmbase.a
+mmem_LDADD = memcache/libmemcache.a base/libmmbase.a libmmarch.a
