Move format files to base dir

--- a/src/base/Makefile.am
+++ b/src/base/Makefile.am
@@ -16,6 +16,7 @@ libmmbase_a_SOURCES = \
 	combiner.c combiner.h \
 	daemon.c daemon.h \
 	exit.c exit.h \
+	format.c format.h \
 	hash.c hash.h \
 	hashmap.c hashmap.h \
 	json.c json.h \
@@ -60,6 +61,5 @@ libmmbase_a_SOURCES = \
 	thread/monitor.c thread/monitor.h \
 	thread/request.c thread/request.h \
 	thread/thread.c thread/thread.h \
-	util/format.c util/format.h \
 	util/hook.c util/hook.h \
 	util/libcall.c util/libcall.h
