--- a/tests/unit/Makefile.am
+++ b/tests/unit/Makefile.am
@@ -4,10 +4,11 @@ AM_CFLAGS = -Wall -Wextra
 
 LDADD = $(top_builddir)/src/base/libmmbase.a $(top_builddir)/src/arch/libmmarch.a
 
-TESTS = bitops-test bitset-test json-reader-test
+TESTS = bitops-test bitset-test json-reader-test scan-test
 
 check_PROGRAMS = $(TESTS)
 
 bitops_test_SOURCES = bitops-test.c
 bitset_test_SOURCES = bitset-test.c
 json_reader_test_SOURCES = json-reader-test.c
+scan_test_SOURCES = scan-test.c
