--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,33 @@
 *.o
+*.lo
 *.a
+*.la
 *.dSYM
 
 *~
 
 .deps
+.libs
 .dirstamp
 Makefile
 Makefile.in
-aclocal.m4
-autom4te.cache
-config.log
-config.status
-configure
-config/ar-lib
-config/compile
-config/config.guess
-config/config.sub
-config/depcomp
-config/install-sh
-config/missing
-src/config.h
-src/config.h.in
-src/stamp-h1
 
-nbproject
-.cproject
-.project
+/aclocal.m4
+/autom4te.cache
+/config.log
+/config.status
+/configure
+/libtool
+/config/ar-lib
+/config/compile
+/config/config.guess
+/config/config.sub
+/config/depcomp
+/config/install-sh
+/config/missing
+/src/config.h
+/src/config.h.in
+/src/stamp-h1
+
+/.cproject
+/.project
